--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "canvas": "^2.8.0",
     "circular-natal-horoscope-js": "^1.0.14",
     "discord.js": "^12.5.3",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "sqlite": "^4.0.23",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "eslint": "^7.30.0"
