--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/node": "^7.14.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.14.7",
+    "@types/node": "^16.3.3",
     "axios": "^0.21.1",
     "babel-plugin-root-import": "^6.6.0",
     "canvas": "^2.8.0",
@@ -13,7 +14,9 @@
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
     "sqlite": "^4.0.23",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
     "eslint": "^7.30.0"
