--- a/package.json
+++ b/package.json
@@ -1,27 +1,17 @@
 {
-  "dependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.14.6",
-    "@babel/eslint-parser": "^7.14.7",
-    "@babel/node": "^7.14.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.14.7",
-    "@types/node": "^16.3.3",
-    "axios": "^0.21.1",
-    "babel-plugin-root-import": "^6.6.0",
-    "canvas": "^2.8.0",
-    "circular-natal-horoscope-js": "^1.0.14",
-    "discord.js": "^12.5.3",
-    "dotenv": "^10.0.0",
-    "sqlite": "^4.0.23",
-    "sqlite3": "^5.0.2",
-    "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
-  },
   "devDependencies": {
-    "eslint": "^7.30.0"
+    "@types/node": "^17.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "dotenv": "^16.0.0",
+    "eslint": "^8.8.0",
+    "tsc-watch": "^4.6.0",
+    "typescript": "^4.5.5"
   },
   "scripts": {
-    "start": "babel-node src/index.js"
+    "build": "tsc ./src/server.ts --outDir ./dist/src",
+    "run": "node ./dist/src/server.js",
+    "watch": "tsc-watch ./src/index.ts --outDir ./dist --onSuccess \"node ./dist/index.js\"",
+    "eslint": "eslint ./src/**"
   }
 }
