--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.14",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
@@ -13,5 +14,9 @@
     "run": "node ./dist/src/server.js",
     "watch": "tsc-watch ./src/index.ts --outDir ./dist --onSuccess \"node ./dist/index.js\"",
     "eslint": "eslint ./src/**"
+  },
+  "dependencies": {
+    "discord.js": "^13.6.0",
+    "express": "^4.17.2"
   }
 }
