--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,9 @@
         "types": [
             "node"
         ]
-    }
+    },
+    "include": [
+        "./src/@types/global.d.ts",
+        "./src/**/*.ts"
+    ]
 }
